--- a/platformio.ini
+++ b/platformio.ini
@@ -8,12 +8,24 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+[platformio]
+default_envs = Mega2560
+
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
+lib_deps = teemuatlut/TMCStepper@^0.7.3
+upload_port = COM4
 
 [env:esp32s3]
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
+lib_deps = teemuatlut/TMCStepper@^0.7.3
+
+[env:Mega2560]
+platform = atmelavr
+board = megaatmega2560
+framework = arduino
+lib_deps = teemuatlut/TMCStepper@^0.7.3
