Inverted sense example

--- a/platformio.ini
+++ b/platformio.ini
@@ -16,7 +16,6 @@ platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = teemuatlut/TMCStepper@^0.7.3
-upload_port = COM4
 
 [env:esp32s3]
 platform = espressif32
@@ -29,3 +28,5 @@ platform = atmelavr
 board = megaatmega2560
 framework = arduino
 lib_deps = teemuatlut/TMCStepper@^0.7.3
+upload_port = COM4
+upload_speed = 115200
