--- a/platformio.ini
+++ b/platformio.ini
@@ -15,18 +15,24 @@ default_envs = Mega2560
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
-lib_deps = teemuatlut/TMCStepper@^0.7.3
+lib_deps = 
+	teemuatlut/TMCStepper@^0.7.3
+	teemuatlut/TMC2208Stepper@^0.2.5
 
 [env:esp32s3]
 platform = espressif32
 board = seeed_xiao_esp32s3
 framework = arduino
-lib_deps = teemuatlut/TMCStepper@^0.7.3
+lib_deps = 
+	teemuatlut/TMCStepper@^0.7.3
+	teemuatlut/TMC2208Stepper@^0.2.5
 
 [env:Mega2560]
 platform = atmelavr
 board = megaatmega2560
 framework = arduino
-lib_deps = teemuatlut/TMCStepper@^0.7.3
+lib_deps = 
+	teemuatlut/TMCStepper@^0.7.3
+	teemuatlut/TMC2208Stepper@^0.2.5
 upload_port = COM4
 upload_speed = 115200
