--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = Mega2560
+default_envs = ArduinoUNO
 
 [env:nanoatmega328]
 platform = atmelavr
@@ -34,5 +34,12 @@ framework = arduino
 lib_deps = 
 	teemuatlut/TMCStepper@^0.7.3
 	teemuatlut/TMC2208Stepper@^0.2.5
-upload_port = COM4
 upload_speed = 115200
+
+[env:ArduinoUNO]
+platform = atmelavr
+board = uno
+framework = arduino
+lib_deps = 
+	teemuatlut/TMCStepper@^0.7.3
+	teemuatlut/TMC2208Stepper@^0.2.5
