Inverted sense example

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,14 +9,13 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = Mega2560
+default_envs = AUNO
 
 [env:nanoatmega328]
 platform = atmelavr
 board = nanoatmega328
 framework = arduino
 lib_deps = teemuatlut/TMCStepper@^0.7.3
-upload_port = COM4
 
 [env:esp32s3]
 platform = espressif32
@@ -27,5 +26,13 @@ lib_deps = teemuatlut/TMCStepper@^0.7.3
 [env:Mega2560]
 platform = atmelavr
 board = megaatmega2560
+framework = arduino
+lib_deps = teemuatlut/TMCStepper@^0.7.3
+upload_port = COM4
+upload_speed = 115200
+
+[env:AUNO]
+platform = atmelavr
+board = uno
 framework = arduino
 lib_deps = teemuatlut/TMCStepper@^0.7.3
